# course_3

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
src/: main.py  utils.py
tests/: conftest.py  test_main.py  test_utils.py
