[tool.poetry]
name = "course3"
version = "0.1.0"
description = "Код для виджета «Операции по счетам»"
authors = ["Konstantin Onishchenko <kostik80_80@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
utils = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
